--- a/Todo/App.razor
+++ b/Todo/App.razor
@@ -1,3 +1,4 @@
+@using Todo.Blazor.Shared
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
