--- a/Todo/Pages/TodoListItems/TodoItemComponent.razor
+++ b/Todo/Pages/TodoListItems/TodoItemComponent.razor
@@ -1,7 +1,6 @@
-﻿@using Todo.Models
-@using Todo.Shared.Enums
+﻿@using Todo.Shared.Enums
 <div class="w-full h-24 rounded flex flex-wrap content-center shadow justify-items-stretch  @GetPriorityColor()">
-    <input class="m-4 h-8 w-4 text-indigo-600 border-gray-300 rounded" type="checkbox" name="status" @bind="@TodoItem.Status" />
+    <input class="m-4 h-8 w-4 text-indigo-600 border-gray-300 rounded" type="checkbox" name="status" @bind="@Models.TodoItem.Status" />
     
     @if (Editing)
     {
@@ -18,7 +17,7 @@
     }
     else
     {
-        <label class="m-4 w-4/5 h-8 text-lg font-medium">@TodoItem.Name</label>
+        <label class="m-4 w-4/5 h-8 text-lg font-medium">@Models.TodoItem.Name</label>
         <button class="transition duration-500 ease-in-out transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl shadow rounded mr-4 h-auto px-4 hover:bg-green-300" @onclick="Edit">Edit</button>
         <button class="transition duration-500 ease-in-out transform hover:scale-105 hover:-translate-y-1 hover:shadow-xl shadow rounded mr-4 h-auto px-4 hover:bg-green-300" @onclick="Delete">Delete</button>
 
