--- a/Todo/Components/TodoList/TodoListsOverviewComponent.razor
+++ b/Todo/Components/TodoList/TodoListsOverviewComponent.razor
@@ -1,20 +1,15 @@
-﻿@page "/todolist/overview"
-
-<div class="flex w-full flex-wrap gap-2">    
+﻿<div class="flex w-full flex-wrap gap-2">    
     @if (TodoLists != null)
     {
         <NewTodoListComponent OnCreate="NewTodoList"/>
         @foreach (var todoList in TodoLists)
         {
             <TodoListComponent OnChange="Update" OnDelete="Delete" TodoList="@todoList"/>
-
-
         }
     }
     else
     {
         <div class="w-full h-full flex justify-center flex-wrap content-center">
-
             <LoaderComponent/>
         </div>
     }
