--- a/Todo/_Imports.razor
+++ b/Todo/_Imports.razor
@@ -6,7 +6,11 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Todo
+@using Todo.Blazor
 @using Todo.Shared
 @using Plk.Blazor.DragDrop
 @using Microsoft.AspNetCore.Components.Authorization
+@using Todo.Blazor.Components
+@using Todo.Blazor.Components.TodoList
+@using Todo.Blazor.Components.TodoListItems
+
