--- a/Todo/_Imports.razor
+++ b/Todo/_Imports.razor
@@ -13,4 +13,6 @@
 @using Todo.Blazor.Components
 @using Todo.Blazor.Components.TodoList
 @using Todo.Blazor.Components.TodoListItems
+@using Todo.Blazor.Components.Users
 
+@using Blazored.Typeahead
