--- a/Todo/Components/TodoList/TodoListComponent.razor
+++ b/Todo/Components/TodoList/TodoListComponent.razor
@@ -14,5 +14,5 @@
 
         }
     </div>
-        <TodoListShareOptionComponent Members="@TodoList.Members" OnNewMember="AddNewMember" OnMemberDelete="MemberDelete" />
+        <TodoListShareOptionComponent Members="@TodoList.Members" OnNewMember="AddNewMember" OnMemberDelete="MemberDelete" OnShareChange="ShareChange" />
 </div>
